syntax = "proto3";

package protodemo;

option go_package = "github.com/evanj/hacks/protodecode/protodemo";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

// DecodeDemo contains many types to test decoding.
// See: https://developers.google.com/protocol-buffers/docs/proto3#scalar
message DecodeDemo {
  int64 int64_value = 1;
  string string_value = 2;
  bytes bytes_value = 3;
  google.protobuf.Timestamp timestamp = 4;
  google.protobuf.Any any = 5;
}
